[gd_scene load_steps=21 format=2]

[ext_resource path="res://gui/menu/gamesave.gd" type="Script" id=1]
[ext_resource path="res://gui/save/bgs/friederich.png" type="Texture" id=2]
[ext_resource path="res://gui/save/frame.png" type="Texture" id=3]
[ext_resource path="res://gui/fonts/S-13.font" type="BitmapFont" id=4]
[ext_resource path="res://gui/save/deaths.png" type="Texture" id=5]
[ext_resource path="res://gui/menu/tabs/map.png" type="Texture" id=6]
[ext_resource path="res://gui/fonts/L-24.font" type="BitmapFont" id=7]
[ext_resource path="res://gui/menu/icons/gold.png" type="Texture" id=8]
[ext_resource path="res://gui/menu/textitem.tscn" type="PackedScene" id=9]
[ext_resource path="res://gui/fonts/M-15-options.font" type="BitmapFont" id=10]
[ext_resource path="res://gui/menu/cursor.tscn" type="PackedScene" id=11]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="Shader" id=4]

code = "shader_type canvas_item;
render_mode blend_premul_alpha;

uniform vec4 start:hint_color;
uniform vec4 stop:hint_color;

void fragment() {
COLOR = mix(start, stop, UV.x);
COLOR = mix(start, COLOR, UV.x*1.25);

COLOR.a = texture(TEXTURE,UV).a*COLOR.a;
}"

[sub_resource type="ShaderMaterial" id=5]

render_priority = 0
shader = SubResource( 4 )
shader_param/start = Color( 0.136719, 0.00801086, 0.00801086, 0.75 )
shader_param/stop = Color( 0.1, 0.1, 0.1, 0.75 )
_sections_unfolded = [ "shader_param" ]

[sub_resource type="ImageTexture" id=6]

flags = 6
storage = 0
lossy_quality = 0.7
flags = 6
size = Vector2( 1, 1 )

[sub_resource type="Shader" id=7]

code = "shader_type canvas_item;

uniform vec4 start:hint_color;
uniform vec4 stop:hint_color;

void fragment() {
COLOR = mix(start, stop, UV.x);

COLOR.a = texture(TEXTURE,UV).a*COLOR.a;
}"

[sub_resource type="ShaderMaterial" id=8]

render_priority = 0
shader = SubResource( 7 )
shader_param/start = Color( 0.79, 0.75, 0.63, 0 )
shader_param/stop = Color( 0.788235, 0.74902, 0.627451, 1 )
_sections_unfolded = [ "shader_param" ]

[sub_resource type="ImageTexture" id=9]

flags = 6
storage = 0
lossy_quality = 0.7
flags = 6
size = Vector2( 1, 1 )

[node name="gamesave" type="ToolButton"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 660.0
margin_bottom = 167.0
rect_min_size = Vector2( 660, 167 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1
script = ExtResource( 1 )

[node name="BG" type="Polygon2D" parent="." index="0"]

position = Vector2( 66, 11 )
polygon = PoolVector2Array( 0, 0, 573, 0, 573, 131, 0, 131 )
uv = PoolVector2Array(  )
color = Color( 0.0313726, 0.219608, 0.203922, 0.686275 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0

[node name="characterBG" type="Sprite" parent="." index="1"]

position = Vector2( 48, 0 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( 254, 11 )

[node name="TLframe" type="Sprite" parent="." index="2"]

position = Vector2( 48, 0 )
texture = ExtResource( 3 )
centered = false

[node name="BRframe" type="Sprite" parent="." index="3"]

position = Vector2( 434, 23 )
texture = ExtResource( 3 )
centered = false
flip_h = true
flip_v = true

[node name="id" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 84.0
margin_top = 20.0
margin_right = 124.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
text = "##"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="saved" type="Control" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 48.0
margin_right = 88.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="deaths" type="Sprite" parent="saved" index="0"]

texture = ExtResource( 5 )
offset = Vector2( 102, 28 )

[node name="previewstats" type="Label" parent="saved" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 114.0
margin_top = 20.0
margin_right = 423.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
text = "0    100%    21.01.2017"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="saved" type="Label" parent="saved" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 466.0
margin_top = 20.0
margin_right = 568.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "KEY_SAVED"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="mapicon" type="Sprite" parent="saved" index="3"]

position = Vector2( 36, 68 )
texture = ExtResource( 6 )

[node name="location" type="Label" parent="saved" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 52.0
margin_top = 44.0
margin_right = 222.0
margin_bottom = 75.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 7 )
text = "CATACOMBS"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="playtime" type="Label" parent="saved" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 52.0
margin_top = 82.0
margin_right = 222.0
margin_bottom = 106.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
text = "00:00:00"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="goldicon" type="Sprite" parent="saved" index="6"]

position = Vector2( 36, 125 )
texture = ExtResource( 8 )

[node name="gold" type="Label" parent="saved" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 52.0
margin_top = 118.0
margin_right = 92.0
margin_bottom = 136.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
text = "##G"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="stats" type="Label" parent="saved" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 128.0
margin_top = 118.0
margin_right = 568.0
margin_bottom = 136.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
text = "LV## ####/####HP ###/###MP"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="new" type="Control" parent="." index="6"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 48.0
margin_right = 88.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="savegame" type="Label" parent="new" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 36.0
margin_top = 44.0
margin_right = 573.0
margin_bottom = 112.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 7 )
text = "KEY_SAVEGAME"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="options" type="Control" parent="." index="7"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 48.0
margin_right = 88.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="BG" type="Sprite" parent="options" index="0"]

material = SubResource( 5 )
position = Vector2( 18, 11 )
scale = Vector2( 573, 131 )
texture = SubResource( 6 )
centered = false
_sections_unfolded = [ "Material" ]

[node name="options" type="VBoxContainer" parent="options" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 426.0
margin_top = 16.0
margin_right = 591.0
margin_bottom = 139.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 4
custom_constants/separation = 0
alignment = 0
_sections_unfolded = [ "Grow Direction", "Margin", "Rect", "Size Flags", "Theme", "custom_constants" ]

[node name="load" parent="options/options" index="0" instance=ExtResource( 9 )]

margin_left = 0.0
margin_right = 98.0
margin_bottom = 27.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
size_flags_stretch_ratio = 3.0
custom_fonts/font = ExtResource( 10 )
text = "KEY_LOAD"
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Margin", "Mouse", "Rect", "Size Flags", "custom_constants", "custom_styles" ]

[node name="line" type="TextureRect" parent="options/options" index="1"]

material = SubResource( 8 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 27.0
margin_right = 165.0
margin_bottom = 28.0
rect_min_size = Vector2( 165, 1 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = SubResource( 9 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Anchor", "Margin", "Material", "Rect", "Size Flags", "Theme", "Visibility" ]

[node name="save" parent="options/options" index="2" instance=ExtResource( 9 )]

margin_left = 0.0
margin_top = 32.0
margin_right = 97.0
margin_bottom = 59.0
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
size_flags_stretch_ratio = 3.0
custom_fonts/font = ExtResource( 10 )

[node name="line1" type="TextureRect" parent="options/options" index="3"]

material = SubResource( 8 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 59.0
margin_right = 165.0
margin_bottom = 60.0
rect_min_size = Vector2( 165, 1 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = SubResource( 9 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Material", "Rect", "Size Flags" ]

[node name="delete" parent="options/options" index="4" instance=ExtResource( 9 )]

margin_left = 0.0
margin_top = 64.0
margin_right = 119.0
margin_bottom = 91.0
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
size_flags_stretch_ratio = 3.0
custom_fonts/font = ExtResource( 10 )
text = "KEY_DELETE"

[node name="line2" type="TextureRect" parent="options/options" index="5"]

material = SubResource( 8 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 91.0
margin_right = 165.0
margin_bottom = 92.0
rect_min_size = Vector2( 165, 1 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = SubResource( 9 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Material", "Rect", "Size Flags" ]

[node name="clone" parent="options/options" index="6" instance=ExtResource( 9 )]

margin_left = 0.0
margin_top = 96.0
margin_right = 110.0
margin_bottom = 123.0
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
size_flags_stretch_ratio = 3.0
custom_fonts/font = ExtResource( 10 )
text = "KEY_CLONE"
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Margin", "Mouse", "Rect", "Size Flags", "Theme", "Visibility", "custom_styles" ]

[node name="description" type="Label" parent="options" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 36.0
margin_top = 18.0
margin_right = 364.0
margin_bottom = 93.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 7 )
text = "Uberschreiben Sie dieses Spiel?"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="choice" type="HBoxContainer" parent="options" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 82.0
margin_top = 99.0
margin_right = 328.0
margin_bottom = 139.0
rect_min_size = Vector2( 246, 0 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 64
alignment = 1

[node name="yes" parent="options/choice" index="0" instance=ExtResource( 9 )]

margin_left = 0.0
margin_right = 86.0
margin_bottom = 27.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath("../no")
focus_neighbour_bottom = NodePath(".")
custom_fonts/font = ExtResource( 10 )
text = "KEY_YES"

[node name="no" parent="options/choice" index="1" instance=ExtResource( 9 )]

margin_left = 155.0
margin_right = 233.0
margin_bottom = 27.0
focus_neighbour_left = NodePath("../yes")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
custom_fonts/font = ExtResource( 10 )
text = "KEY_NO"

[node name="icon" parent="." index="8" instance=ExtResource( 11 )]

margin_left = 12.0
margin_top = 65.0
margin_right = 24.0
margin_bottom = 87.0

[connection signal="focus_entered" from="." to="." method="_on_choice_focus_enter"]

[connection signal="focus_exited" from="." to="." method="_on_choice_focus_exit"]


